# suoyin

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/suoyin/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
tools/: update_readme.py
